# meridian

./: .gitignore  CLAUDE.md  DISCOVERY_REPORT.md  HOW_TO_USE.md  PROMPT_build.md  PR_READY_CHECKLIST.md  README.md  agents.md  demo_complete.py  demo_complete_system.py  demo_improved_search.py  demo_memory_usage.py  demo_meridian_original_format.py  pyproject.toml  test_actual_usage.py  test_complete_system.py  test_fresh_setup.py  test_meridian_original_format.py  test_what_works.py
.agents/memory/: config.yaml
.beads/: issues.jsonl
.beadspace/: index.html  issues.json
.claude/: settings.json
.claude/agents/: architect.md  code-reviewer.md  detective.md  discovery.md  scout.md  scribe.md  supervisor-beads.md  supervisor-memory.md  supervisor-python.md
.claude/hooks/: enforce-bead-for-supervisor.sh  enforce-sequential-dispatch.sh  validate-completion.sh
.claude/skills/create-beads-orchestration/mcp-provider-delegator/: pyproject.toml
.claude/skills/create-beads-orchestration/mcp-provider-delegator/src/mcp_provider_delegator/: agent_loader.py  provider_client.py  server.py
.claude/skills/create-beads-orchestration/mcp-provider-delegator/tests/: test_agent_loader.py  test_integration.py  test_provider_client.py  test_server.py
.claude/skills/create-beads-orchestration/mcp-provider-delegator/tests/fixtures/: scout.md
.github/workflows/: beadspace.yml
.specify/memory/: constitution.md
brain/: COMPATIBILITY.md  MASTER_SPEC.md  MEMORY_PROTOCOL_LEGACY.md  MEMORY_SCHEMA.md  README.md  audit_v2_latent_integrity.md
memory/: MEMORY_SYSTEM.md  MOCK_VS_REAL_AUDIT.md  active_state.md  project_brief.md  system_patterns.md
meridian-prd/: PRD-ARCH.md  PRD-MEMORY.md  PRD-MULTIAGENT.md  PRD-ROADMAP.md  PRD-SKILL.md  PRD.md
scripts/: ralph-loop-codex.sh  ralph-loop.py  ralph-loop.sh
(+94 files in other folders)
