[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meridian-brain"
version = "0.1.0"
description = "MERIDIAN Brain Enhanced - RLM-based memory system for AI agents"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "MERIDIAN Team"}
]
keywords = ["ai", "memory", "rlm", "agents", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/zenchantlive/meridian"
Repository = "https://github.com/zenchantlive/meridian"

[tool.setuptools.packages.find]
where = ["."]
include = ["brain*"]

[tool.setuptools.package-data]
brain = ["*.md", "personalities/**/*.md", "sliders/**/*.md", "gauges/**/*.md"]
